@@ -1,3 +1,3 @@
 #!/bin/sh
 
-java -Xmx4G --class-path target/billionrowchallenge-1.0-SNAPSHOT.jar dev.noah.Main
+java -Xmx4G -XX:+EnableDynamicAgentLoading --class-path target/billionrowchallenge-1.0-SNAPSHOT.jar dev.noah.Main
